# OpenPawlet

./: .gitignore  Procfile  README.en.md  README.md  README.zh.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish.workflow.yml
scripts/: README.md  bump_open_pawlet_version.py  check_versions.py  dev-down.ps1  ensure-nanobot-onboard.sh
src/console/: __main__.py  cli.py
src/console/server/: __init__.py  activity_feed.py  agent_defaults_profile_sync.py  app.py  app_state.py  bot_workspace.py  bots_registry.py  cache.py  channels_service.py  config_apply.py  cron_helpers.py  dashboard_metrics.py  dependencies.py  dotenv_io.py  error_handlers.py  http_errors.py  json_utils.py  lifespan.py  mcp_config.py  nanobot_observability_client.py  nanobot_user_config.py  observability_jsonl.py  openai_api.py  openpawlet_runtime_snapshot.py  openpawlet_user_config.py  parsing.py  queue_envelope.py  queues_router.py  runtime_log_read.py  runtime_log_setup.py  session_store.py  signals.py  skills_git_scheduler.py  skills_git_sync.py  state_hub.py  state_hub_helpers.py  state_store.py  team_transcript.py  ws_proxy.py  ws_state.py
src/console/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/nanobot/: __init__.py  nanobot.py
src/nanobot/agent/: autocompact.py  context.py  loop.py  memory.py  outbound.py  profile_resolver.py  runner.py  skills.py  subagent.py  team_serve.py
src/nanobot/api/: server.py
src/nanobot/bus/: __init__.py  envelope.py  events.py  factory.py  queue.py  zmq_bus.py
src/nanobot/channels/: base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  slack.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
src/nanobot/cli/: commands.py  onboard.py
src/nanobot/command/: builtin.py  router.py
src/nanobot/config/: loader.py  paths.py  profile.py  schema.py
src/nanobot/cron/: service.py
src/nanobot/docs/: WEBSOCKET.md
src/nanobot/heartbeat/: service.py
src/nanobot/observability/: __init__.py  buffer.py  telemetry.py
src/nanobot/providers/: anthropic_provider.py  base.py  factory.py  failover.py  instances.py  migrate.py  openai_compat_provider.py  registry.py
src/nanobot/runtime/: __init__.py  agent_manager.py  embedded.py
src/nanobot/session/: context_snapshot.py  manager.py  transcript.py
src/nanobot/templates/: AGENTS.md
src/nanobot/tests/: test_api_attachment.py  test_api_stream.py  test_msteams.py  test_nanobot_facade.py  test_openai_api.py  test_package_version.py  test_queue_stats.py  test_unified_agent_timezone.py
src/nanobot/utils/: console_agents.py  document.py  gitstore.py  helpers.py  runtime_file_log.py  team_env.py  team_gateway_runtime.py  token_usage_jsonl.py  tool_hints.py
src/openpawlet/: __init__.py  __main__.py  openpawlet.py
src/openpawlet/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  outbound.py  profile_resolver.py  runner.py  skills.py  subagent.py  team_serve.py
src/openpawlet/api/: __init__.py  server.py
src/openpawlet/bridge/: package-lock.json  package.json
src/openpawlet/bus/: __init__.py  envelope.py  events.py  factory.py  queue.py  stats_models.py
src/openpawlet/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  qq.py  registry.py  slack.py  telegram.py  websocket.py  wecom.py  weixin.py  whatsapp.py
src/openpawlet/cli/: __init__.py  commands.py  onboard.py  stream.py
src/queue_manager/: README.md  __init__.py  admin.py  cli.py  config.py  idempotency.py  service.py  state.py
tests/: test_msteams.py  test_package_version.py  test_tool_contextvars.py
tests/agent/: test_cursor_recovery.py  test_mcp_transient_retry.py  test_skill_creator_scripts.py
tests/console/: test_agent_defaults_profile_sync.py  test_bots_registry.py  test_config_apply.py  test_config_autofill.py  test_merge_config_section.py  test_path_security.py  test_state_store.py
tests/session/: test_session_fsync.py
(+561 files in other folders)
