[project]
name = "open-pawlet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "open-pawlet contributors" }
]
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # PyPI packages cannot declare Git URL deps; pin a floor from PyPI. For JackLuguibin/nanobot
    # fork features, override after install: pip install "nanobot-ai @ git+https://github.com/JackLuguibin/nanobot@feat/enhance_ws_event_main"
    "nanobot-ai>=0.1.5.post1",
    "websockets>=12",
    "loguru>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "honcho>=1.1.0"
]

# Editable install only links open-pawlet sources. To use a local nanobot clone:
#   pip uninstall -y nanobot-ai && pip install -e ../nanobot

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/JackLuguibin/OpenPawlet"
Documentation = "https://github.com/JackLuguibin/OpenPawlet/blob/main/README.md"
Repository = "https://github.com/JackLuguibin/OpenPawlet"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/console"]
exclude = [
    "/src/console/web/node_modules",
]

[project.scripts]
console = "console.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/README.zh.md",
    "/README.en.md",
    "/LICENSE",
    "/Procfile",
]
exclude = [
    "/src/console/web/node_modules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
